# UQpy

./: .coveragerc  .pre-commit-config.yaml  Dockerfile  GitVersion.yml  README.rst  architecture.html  bibliography.html  genindex.html  index.html  news_doc.html  objects.inv  paper.html  py-modindex.html  pyproject.toml  requirements.txt  runmodel_doc.html  search.html  searchindex.js  setup.py  sg_execution_times.html  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: build-and-deploy-docs.yml  build-and-test.yml  compatibility-and-environment-tests.yml  lint-and-format.yml  release.yml  scorecard.yml  static-code-analysis.yml
_downloads/05ac13aa9dd4c49535b8d191a784e6d2/: burgers.ipynb
_downloads/0fac9214a0e61bab16263ebb863e3e15/: plot_selection_distributions.ipynb
_downloads/1042332ec4532db38e8b8d652a56709a/: generalised_sobol_mechanical_oscillator_ODE.py
_downloads/13548030fd9c2e287d9f9503fd480495/: mcmc_diagnostics.ipynb
_downloads/166f2cb9bab11519dac23d75739af769/: plot_morris_2d_gfunction.ipynb
_downloads/1a790372b63058ed296974bb42ed4a3b/: linear_elastic.ipynb
_downloads/1fcfd0a21043a8735d90287b8e0898ff/: local_additive.ipynb
_downloads/20953c3544e8ccdfb2f824e31ad63285/: cvm_exponential.ipynb
_modules/: index.html
_sources/: sg_execution_times.rst.txt
_static/: documentation_options.js
dimension_reduction/: direct_pod.html  dmaps.html  hosvd.html  index.html  pod.html  snapshot_pod.html
distributions/: continuous_1d_collection.html  copulas.html  discrete_1d_collection.html  distribution_parent.html  distributions_continuous_1d.html  distributions_discrete_1d.html  distributions_multivariate.html  index.html  joint_from_independent.html  joint_from_marginals_copula.html  multivariate_distributions.html  user_defined_distributions.html
docs/: requirements.txt
inference/: bayes_model_selection.html  bayes_parameter_estimation.html  index.html  inference_models.html  info_model_selection.html  mle.html
reliability/: form.html  index.html  inverse_form.html  sorm.html  subset.html  taylor_series.html
sampling/: akmcs.html  importance_sampling.html  index.html  latin_hypercube.html  monte_carlo.html  refined_stratified_sampling.html  simplex.html  stratified_sampling.html  theta_criterion.html
scientific_machine_learning/: index.html  losses.html
sensitivity/: chatterjee.html  cramer_von_mises.html  generalised_sobol.html  index.html  morris.html  pce.html  sobol.html
stochastic_process/: bispectral_representation.html  index.html  karhunen_loeve_1d.html  karhunen_loeve_2d.html  spectral_representation.html  translation.html
surrogates/: gpr.html  index.html  polynomial_chaos.html  srom.html
transformations/: correlate.html  decorrelate.html  index.html  nataf.html
utilities/: grassmann_point.html  index.html
(+1586 files in other folders)
