[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testUQpy"
version = "4.2.0"
description = "UQpy is a general purpose toolbox for Uncertainty Quantification"
readme = "README.rst"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Michael D. Shields" },
    { name = "Dimitris G. Giovanis" },
    { name = "Audrey Olivier" },
    { name = "Aakash Bangalore-Satish" },
    { name = "Mohit Chauhan" },
    { name = "Lohit Vandanapu" },
    { name = "Ketson R.M. dos Santos" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English"
]
dependencies = [
    "numpy ==2.0.2",
    "scipy == 1.13.1",
    "matplotlib == 3.9.4",
    "scikit-learn == 1.6.1",
    "fire == 0.7.0",
    "pathlib==1.0.1",
    "beartype == 0.20.2",
    "setuptools==80.7.1",
    "torch == 2.7.0",
    "torchinfo == 1.8.0",
    "pre-commit == 4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.3.5",
    "pytest-cov >= 6.1.1",
    "pylint >= 3.3.7",
    "wheel >= 0.45.1",
    "twine >= 6.1.0",
    "sphinx_autodoc_typehints >= 1.23.0",
    "sphinx_rtd_theme >= 1.2.0",
    "sphinx_gallery >= 0.13.0",
    "sphinxcontrib_bibtex >= 2.5.0",
    "Sphinx >= 6.1.3"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]



[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Core settings
line-length = 100
target-version = "py39"

[tool.ruff.lint]

#What rules to enable
select = ["E", "F", "I", "B", "S"]
# E = pycodestyle errors
# F = pyflakes
# I = isort (import sorting)
# B = bugbear (best practices)
# UP = pyupgrade (modernization)
# D = pydocstyle (docstring rules)
# S = bandit (security)

#What rules to ignore
ignore = ["E402","E501","E712","E721", "E722", "E731", "E741", "F401", "F403", "F405","F541","F811", "F841","I001", "B007","B008","B009", "B023", "B024", "B027","B904", "S605", "S301", "S307","S101", "S102"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"
docstring-code-format = true
